--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,19 @@ body {
 .navbar-light .navbar-nav .nav-link {
   color: #000000;
   font-weight: 600;
+  border-bottom: 1px solid transparent;
 }
-.theme-btn {
-  background-image: linear-gradient(to right,#3c3ca5,#4d4dd2);
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #5353db;
+}
+.login-btn {
+  background-image: linear-gradient(to right,#227ee1,#1d64b0);
   font-weight: 600;
   color: #ffffff;
   border-radius: 5px;
 }
-.login-btn {
-  background-image: linear-gradient(to right,#227ee1,#1d64b0);
+.theme-btn {
+  background-image: linear-gradient(to right,#3c3ca5,#4d4dd2);
   font-weight: 600;
   color: #ffffff;
   border-radius: 5px;
@@ -34,6 +38,12 @@ body {
 }
 .theme-btn:hover {
   color: #ffffff;
+}
+.login-btn:active {
+  box-shadow: none;
+}
+.theme-btn:active {
+  box-shadow: none;
 }
 #top_contnt {
   padding-bottom: 60px;
@@ -47,11 +57,25 @@ body {
   font-size: 60px;
   font-weight: 700;
 }
-p {
+.article-heading {
+  font-size: 48px;
+  font-weight: 700;
+}
+.text-color {
+  color: #5353db;
+}
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #5353db;
+  border-radius: 50%;
+  display: inline-block;
+}
+.slogan {
   font-size: 22px;
 }
 #services_icon {
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 .top-icon {
   border-radius: 20px;
