--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,10 @@ body {
   border-radius: 20px;
   box-shadow: rgb(0 0 0 / 10%) 0px 6px 8px
 }
+.core-development {
+  margin-bottom: 100px;
+}
+.psd-to-html {
+  padding: 80px 80px;
+  background-color: #f8f8f8;
+}
