--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,23 @@ body {
 }
 .navbar-light .navbar-nav .nav-link {
   color: #000000;
-  font-weight: 600;
   border-bottom: 1px solid transparent;
 }
 .navbar-light .navbar-nav .nav-link:hover {
+  color: #5353db;
+}
+.dropdown-menu-center {
+  right: auto;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-item:focus, .dropdown-item:hover {
+  background-color: transparent;
   color: #5353db;
 }
 .login-btn {
@@ -85,6 +98,6 @@ body {
   margin-bottom: 100px;
 }
 .psd-to-html {
-  padding: 80px 80px;
+  padding: 90px 90px;
   background-color: #f8f8f8;
 }
